Build framework for UX
I created a rough user interface to allow
for score updates. Towards the end, I added
an initialization button to load an
input field to enter the round count.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,29 @@
-<script type="text/javascript" src="index.js">
-    
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="index.js" defer></script>
+    <title>Document</title>
+</head>
+<body>
+    <h1 class="page-title">Let's play a game!</h1>
+    <button class="start-button">Begin?</button>
+    <div class="content-container">
+        <h2>Here are your weapons...</h2>
+        <div class="tool-list">
+            <div data-choice="rock" class="tool-container">R</div>
+            <div data-choice="paper" class="tool-container">P</div>
+            <div data-choice="scissors" class="tool-container">S</div>
+        </div>
+
+        <div class="score-container">
+            <h2 class="player-score">0</h2> - 
+            <h2 class="computer-score">0</h2>
+        </div>
+    </div>
+</body>
+</html>
+
