Added name input and display properties
Using event listener, I was able to add
a name input submission feature that
displays the player name and removes
the input and submit button upon exe

--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
         </div>
 
         <div class="score-container">
-            <h2 class="player-score">0</h2> - 
-            <h2 class="computer-score">0</h2>
+            <div class="player-container">
+                <h4 class="name"></h4>
+                <h2 class="player-score">0</h2>
+            </div>
+            <div class="computer-container">
+                <h4>Computer</h4>
+                <h2 class="computer-score">0</h2>
+            </div>
         </div>
     </div>
 </body>
