Add animations for round play
I plan to use Javascript to initiate the
animation once a round is initated, but for
now I'm jsut confirming it does what I want.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <div data-choice="paper" class="tool-container">P</div>
             <div data-choice="scissors" class="tool-container">S</div>
         </div>
+        <div class="fist-section">
+            <div class="fist-container-left play-left"></div>
+            <div class="fist-container-right play-right"></div>
+        </div>
 
         <div class="score-container">
             <div class="player-container">
