Syncronize animation to shoot button

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             <div data-choice="scissors" class="tool-container">S</div>
         </div>
         <div class="fist-section">
-            <div class="fist-container-left play-left"></div>
-            <div class="fist-container-right play-right"></div>
+            <div class="fist-container-left"></div>
+            <div class="fist-container-right"></div>
         </div>
+        <button class="shoot-button">Shoot!</button>
 
         <div class="score-container">
             <div class="player-container">
