--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div data-choice="scissors" class="tool-container">S</div>
         </div>
         <div class="fist-section">
-            <div class="fist-container-left"></div>
-            <div class="fist-container-right"></div>
+            <div class="fist-container-left"><img src="./img/rock.png"></div>
+            <div class="fist-container-right"><img src="./img/rock.png"></div>
         </div>
         <button class="shoot-button">Shoot!</button>
 
@@ -35,6 +35,7 @@
             </div>
         </div>
     </div>
+    <h2 class="test"></h2>
 </body>
 </html>
 
