Create a radio button-esque selection
The weapon buttons will now unhighlight when
another weapons is selected. Next will remove
the test text field at the bottom. Also added
a check to the shoot button. It will nowonly activate
once the game has been initialized and a choice
has been made.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="content-container">
         <h2>Here are your weapons...</h2>
         <div class="tool-list">
-            <div data-choice="rock" class="tool-container">R</div>
-            <div data-choice="paper" class="tool-container">P</div>
-            <div data-choice="scissors" class="tool-container">S</div>
+            <div data-choice="rock" class="tool-container"><img src="./img/ActualRock.png" alt=""></div>
+            <div data-choice="paper" class="tool-container"><img src="./img/Paper.png" alt=""></div>
+            <div data-choice="scissors" class="tool-container"><img src="./img/Scissors.png" alt=""></div>
         </div>
         <div class="fist-section">
             <div class="fist-container-left"><img src="./img/rock.png"></div>
