Add transition effects to change hands for input

--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
             <div data-choice="scissors" class="tool-container"><img src="./img/Scissors.png" alt=""></div>
         </div>
         <div class="fist-section">
-            <div class="fist-container-left"><img src="./img/rock.png"></div>
-            <div class="fist-container-right"><img src="./img/rock.png"></div>
+            <div class="fist-container-left">
+                <img class="player-hand-rock current-hand" value="rock" src="./img/Player_rock.png">
+                <img class="player-hand-paper" value="paper" src="./img/Player_paper.png">
+                <img class="player-hand-scissors" value="scissors" src="./img/Player_scissors.png">
+            </div>
+            <div class="fist-container-right">
+                <img class="comp-hand-rock current-hand" value="rock" src="./img/Comp_rock.png">
+                <img class="comp-hand-paper" value="paper" src="./img/Comp_paper.png">
+                <img class="comp-hand-scissors" value="scissors" src="./img/Comp_scissors.png">
+            </div>
         </div>
         <button class="shoot-button">Shoot!</button>
 
