--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 class="page-title">Let's play a game!</h1>
     <button class="start-button">Begin?</button>
-    <div class="content-container">
+    <div class="content-container hidden">
         <h2>Here are your weapons...</h2>
         <div class="tool-list">
             <div data-choice="rock" class="tool-container"><img src="./img/ActualRock.png" alt=""></div>
@@ -19,31 +19,28 @@
             <div data-choice="scissors" class="tool-container"><img src="./img/Scissors.png" alt=""></div>
         </div>
         <div class="fist-section">
-            <div class="fist-container-left">
+            <div class="player-container score">
+                <h4 class="name"></h4>
+                <h2 class="player-score">0</h2>
+            </div>
+            <div class="fist-container-left hand">
                 <img class="player-hand-rock current-hand" value="rock" src="./img/Player_rock.png">
                 <img class="player-hand-paper" value="paper" src="./img/Player_paper.png">
                 <img class="player-hand-scissors" value="scissors" src="./img/Player_scissors.png">
             </div>
-            <div class="fist-container-right">
+            <div class="fist-container-right hand">
                 <img class="comp-hand-rock current-hand" value="rock" src="./img/Comp_rock.png">
                 <img class="comp-hand-paper" value="paper" src="./img/Comp_paper.png">
                 <img class="comp-hand-scissors" value="scissors" src="./img/Comp_scissors.png">
             </div>
-        </div>
-        <button class="shoot-button">Shoot!</button>
-
-        <div class="score-container">
-            <div class="player-container">
-                <h4 class="name"></h4>
-                <h2 class="player-score">0</h2>
-            </div>
-            <div class="computer-container">
+            <div class="computer-container score">
                 <h4>Computer</h4>
                 <h2 class="computer-score">0</h2>
             </div>
         </div>
+        <button class="shoot-button">Shoot!</button>
+
     </div>
-    <h2 class="test"></h2>
 </body>
 </html>
 
